--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.7"
 services:
   plex:
     image: "linuxserver/plex"
@@ -122,3 +122,7 @@ services:
 
 networks: 
   media_nw:
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.1.0/24
