--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,4 +110,11 @@ services:
     ports:
       - "8181:8181"
 
+  photoprism:
+    image: "photoprism/photoprism:latest"
+    restart: "unless-stopped"
+    volumes: 
+      - "/mnt/external/media/photos:/home/photoprism/Pictures/Originals:ro"
+    ports:
+      - "2342:2342"
 
