--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,7 @@ services:
     restart: "unless-stopped"
     volumes: 
       - "/mnt/external/media/photos:/home/photoprism/Pictures/Originals:ro"
+      - "/mnt/external/docker-mounts/photoprism:/home/photoprism/.cache/photoprism"
     ports:
       - "2342:2342"
 
